Fix alignment of blog aside title. Reduce font sizes  and padding for the blog on medium devices

--- a/_scss/_media-queries.scss
+++ b/_scss/_media-queries.scss
@@ -42,6 +42,18 @@
     }
   }
 
+  .l-aside--right {
+    padding-left: 30px;
+  }
+
+  .l-main--right {
+    padding-right: 20px;
+  }
+
+  .l-main--left {
+    padding-right: 50px;
+  }
+
   .post-title {
     font-size: 50px; //* Kilo */
     line-height: 65px;
@@ -50,9 +62,8 @@
   }
 
   .blog-aside-title {
-    font-size: 42px;
-    line-height: 45px;
-    margin-bottom: 110px;
+    font-size: 46px;
+    line-height: 65px;
   }
 }
 
@@ -64,11 +75,6 @@
 
   .content {
     padding: 0 50px;
-  }
-
-  .l-main {
-    max-width: none;
-    padding-right: 50px;
   }
 
   //* Leave more room for hero */
@@ -135,26 +141,6 @@
     .plan-period {
       padding-left: 3px;
     }
-  }
-}
-
-@media screen and (min-width: $bp-med + 1) and (max-width: $bp-med-large-2) {
-
-  //* Adjust blog font sizes so headlines don't wrap too much */
-  .post-title {
-    font-size: 37px;
-    line-height: 50px;
-    margin-bottom: 30px;
-  }
-
-  .post-meta {
-    font-size: 16px;
-  }
-
-  .blog-aside-title {
-    font-size: 33px;
-    line-height: 50px;
-    margin: 140px 0 95px;
   }
 }
 
