--- a/_scss/pages/_blog.scss
+++ b/_scss/pages/_blog.scss
@@ -54,8 +54,8 @@
 
 .blog-aside-title {
   @extend .post-title;
-  margin-bottom: 95px;
-  margin-top: 170px;
+  margin-bottom: 110px;
+  margin-top: 160px;
 }
 
 
